syntax = "proto3";
package covidtracking;

service covidtracking {
    rpc doctorProfessions (professionRequest) returns (professionResponse) {}
    rpc city (cityRequest) returns (cityResponse) {}
    rpc hospital (hospitalRequest) returns (hospitalResponse) {}
    rpc doctorList (doctorListRequest) returns (doctorListResponse) {}
    rpc userLogin (userLoginRequest) returns (userLoginResponse) {}
    rpc getUserData (getUserRequest) returns (getUserResponse) {}
    rpc calculateBMI (bmiRequest) returns (bmiResponse){}
    rpc signUp (signUpRequest) returns (signUpResponse){}
    rpc getPin (pinRequest) returns (pinResponse) {}
    rpc safeArea (safeAreaRequest) returns (safeAreaResponse) {}
    rpc UserDisease (userDiseaseRequest) returns (userDiseaseResponse) {}
    rpc covidTest (covidTestRequest) returns (covidTestResponse){}
}

message professionRequest {
    int32 professionId = 1;
}

message professionResponse {
    string professionName = 2;
}

message cityRequest {
    int32 cityId = 1;
}

message cityResponse {
    string cityName = 1;
    float cityLatitude = 2;
    float cityLongitude = 3;
}

message hospitalRequest {
    int32 cityId = 1;
}

message hospitalResponse {
    string hospitalName = 1;
    float hospitalLatitude = 2;
    float hospitalLongitude = 3;
}

message doctorListRequest {
    int32 doctorId = 1;
}

message doctorListResponse {
    string doctorName = 1;
    string doctorSurname = 2;
    string hospitalName = 3;
    string professionName = 4;
}

message userLoginRequest {
    int64 identityNo = 1;
    string password = 2;
}

message userLoginResponse {
    string token = 1;
}

message getUserRequest {
    string userId = 1;
}

message getUserResponse {
    string name = 1;
    string surname = 2;
    bool gender = 3;
    int32 age = 4;
    float weight = 5;
    float height = 6;
    float bmi = 7;
    float addressLatitude = 8;
    float addressLongitude = 9;
    int64 mobileNumber = 10;
    string selectedDoctorName = 11;
}

message bmiRequest {
    int64 userId = 1;
    float weight = 2;
    float height = 3;
}

message bmiResponse {}

message signUpRequest {
    string name = 1;
    string surname = 2;
    bool gender = 3;
    int32 age = 4;
    float weight = 5;
    float height = 6;
    float addressLatitude = 8;
    float addressLongitude = 9;
    int64 mobileNumber = 10;
    string selectedDoctorName = 11;
    bool meritialStatus = 12;
    bool workHealthSector = 13;
    int64 userId = 14;
    int64 identityNo = 15;
    string password = 16;
}

message signUpResponse {
    string signupMessage = 1;
}

message pinRequest {

}

message pinResponse {

}

message safeAreaRequest {
    float currentLatitude = 1;
    float currentLongitude = 2;
    float distance = 3;
}

message safeAreaResponse {
    string status = 1;
    string pinColor = 2;
    int32 peopleCount = 3;
}

message userDiseaseRequest {
    int64 userId = 1;
    bool ards = 2;
    bool pneumonia = 3;
    bool covid = 4;
    bool sars = 5;
    bool careUnit = 6;
    bool chronicLung = 7;
    bool diabetes = 8;
    bool hypertension = 9;
    bool chronicLiver = 10;
    bool chronicKidney = 11;
    bool chronicHearth = 12;
    bool geneticDisorder = 13;
    bool bloodCancer = 14;
    bool otherCancer = 15;
    bool takeChemotherapy = 16;
    bool systemDisorder = 17;
    bool takePainkiller = 18;
    bool takeCortisoneDrug = 19;
    bool thalassemia = 20;
}

message userDiseaseResponse {
    string status = 1;
}

message covidTestRequest {
    int64 userId = 1;
    int32 abdominalPain = 2;
    int32 anorexia = 3;
    int32 bluishFace = 4;
    int32 bodyAches = 5;
    int32 chestPain = 6;
    int32 repeatedShaking = 7;
    int32 confusion = 8;
    int32 delirium = 9;
    int32 diarrhea = 10;
    int32 dizziness = 11;
    int32 weakness = 12;
    float fever = 13;
    int32 feeling = 14;
    int32 headache = 15;
    int32 hoarseVoice = 16;
    int32 lossTasteAndSmell = 17;
    int32 musclePain = 18;
    int32 runnyNose = 19;
    int32 nasalStuffiness = 20;
    int32 nausea = 21;
    int32 ocularReaction = 22;
    int32 persistentCough = 23;
    int32 rhinorrhea = 24;
    int32 shortnessBreath = 25;
    int32 skinRush = 26;
    int32 skippedMeals = 27;
    int32 sneeze = 28;
    int32 soreThroat = 29;
    int32 sputum = 30;
    int32 vomiting = 31;
}

message covidTestResponse {
    float result = 1;
    string testDate = 2;
    string suggestion = 3;
}